app/assets/stylesheets/partial/_library.scss
#library {

  .library {
    display: inline-block;
    padding: 1em;
    min-height: 100%;
    max-width:100%;
    //border: solid 1px $sitnet-grey;
    background-color: $sitnet-common-light;
    .results {
      margin-top: 1em;
    }
  }

  .vertical-text {

    display: inline;
    padding:1em 0.25em;
    height:100%;
    min-height:150px;
    max-height:100%;
    text-align: center;
    color:$sitnet-common-dark;
    width:100%;
    margin-bottom:0;

    span {
      font-size: 0.9em;
      display: block;
      min-height: 1em;
      font-weight: bold;
    }
  }

  .drag-all-wrap:hover {
    background-color: $sitnet-theme;
    color:white;
  }

  .questions-wrapper {
    width:100%;
    margin:1em 0 0 0;
    padding:0;
    height:100%;
    display: inline-table;
  }

  .question-list-wrapper {
    width:94%;
    float:left;
    margin-bottom:0;
    height:100%;
    min-height:100%;
    max-width: 100%;

  }

  .drag-all-wrap {
    float:left;
    height:100%;
    margin-top:0.3em;
    cursor:move;
    border-top:1px solid $sitnet-common-dark;
    border-left:1px solid $sitnet-common-dark;
    border-bottom:1px solid $sitnet-common-dark;
  }

  .library-header {
    background-color: $sitnet-common-dark;
    color: white;
    padding: 0.5em;
    a {
      color: $sitnet-green;
    }
  }

  .library-name {
    color: $sitnet-common-medium;
    border-bottom: 0.15em solid $sitnet-common-light;
  }

  .library-row-icon {
    width:10%;
    float:left;
    cursor: inherit;
  }

  .library-row-text p{
    margin:0.1em;
    padding:0.1em;
    cursor: inherit;
  }

  .library-row-text {
    cursor: inherit;
  }

  .library-row-text-wrap {
    width:90%;
    overflow: hidden;
  }

  .library-main.affix {
    position: fixed;
    overflow-y: scroll;
    height: 100%;
  }

  .library-main.affix-top {
    overflow-y: visible;
    height: 100%;
  }

  .library-main {
    overflow-y: scroll;
    top: 0;
    height: 100%;
  }

  ul {
    list-style: none;
  }

  li {
    padding:0 0.5em;
  }

}

